2004-03-06  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtktoolbar.c (internal_insert_element): Check return value
	of gtk_stock_lookup; if stock lookup fails, just use stock_id as
	label, instead of crashing. Fixes #136202.

2004-03-05  Federico Mena Quintero  <federico@ximian.com>

	* gdk/linux-fb/gdkglobals-fb.c: Make <config.h> the very first
	include.
	* gdk/linux-fb/gdkwindow-fb.c: Likewise.
	* gdk/linux-fb/gdkinput.c: Likewise.

2004-03-05  Federico Mena Quintero  <federico@ximian.com>

	Fixes #136082 and #135265, patch by Morten Welinder.

	* configure.in: Use AC_SYS_LARGEFILE.

	* */*.c: #include <config.h>

2004-03-05  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_select_path): No need to have a
	temporary error variable.

2004-03-05  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Move check for native Win32 (mingw) a bit
	earlier. If Win32, disable static builds (as in GLib). Remove
	unnecessary AC_LIBTOOL_WIN32_DLL.

	* gdk/gdk.def: Add missing entries, thanks to J. Ali Harlow.

	* gdk/win32/gdkcursor-win32.c (color_is_white): const-correctness.

	(gdk_cursor_new_from_pixbuf): Copy of the non-Xcursor X11
	implementation.

	(gdk_display_supports_cursor_alpha,
	gdk_display_supports_cursor_color): Dummy implementations.

	(gdk_display_get_default_cursor_size,
	gdk_display_get_maximal_cursor_size): Implement.

	* gdk/win32/gdkdisplay-win32.c (gdk_display_get_default_group):
	Dummy implementation.

	* gdk/win32/gdkevents-win32.c (gdk_net_wm_supports): Dummy
	implementation.

	* gdk/win32/gdkfont-win32.c (gdk_font_get_display): Implement.

	* gdk/win32/gdkinput-win32.c (gdk_input_motion_events): Remove,
	not in API.

	* gdk/win32/gdkwindow-win32.c (gdk_window_get_group): Dummy
	implementation.

Fri Mar  5 18:00:36 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooserdefault.c (new_folder_button_clicked): scroll
	to the new path.
